Fix long word wrapping in WebKit browsers

--- a/client/blocks/comments/style.scss
+++ b/client/blocks/comments/style.scss
@@ -52,6 +52,7 @@
 
 			white-space: pre-wrap;
 			word-wrap: break-word;
+			word-break: break-word;
 		}
 
 		textarea {
